--- a/vignettes/pavian-bibliography.bib
+++ b/vignettes/pavian-bibliography.bib
@@ -549,48 +549,133 @@
 }
 
 @Article{SFlygare_RSchlaberg2016-GB,
-  author        = {Flygare, Steven and Simmon, Keith and Miller, Chase and Qiao, Yi and Kennedy, Brett and {Di Sera}, Tonya and Graf, Erin H. and Tardif, Keith D. and Kapusta, Aur{\'{e}}lie and Rynearson, Shawn and Stockmann, Chris and Queen, Krista and Tong, Suxiang and Voelkerding, Karl V. and Blaschke, Anne and Byington, Carrie L. and Jain, Seema and Pavia, Andrew and Ampofo, Krow and Eilbeck, Karen and Marth, Gabor and Yandell, Mark and Schlaberg, Robert},
-  title         = {Taxonomer: an interactive metagenomics analysis portal for universal pathogen detection and host mRNA expression profiling.},
-  journal       = {Genome Biol},
-  year          = {2016},
-  volume        = {17},
-  number        = {1},
-  pages         = {111},
-  __markedentry = {[fbreitwieser:]},
-  abstract      = {High-throughput sequencing enables unbiased profiling of microbial communities, universal pathogen detection, and host response to infectious diseases. However, computation times and algorithmic inaccuracies have hindered adoption.We present Taxonomer, an ultrafast, web-tool for comprehensive metagenomics data analysis and interactive results visualization. Taxonomer is unique in providing integrated nucleotide and protein-based classification and simultaneous host messenger RNA (mRNA) transcript profiling. Using real-world case-studies, we show that Taxonomer detects previously unrecognized infections and reveals antiviral host mRNA expression profiles. To facilitate data-sharing across geographic distances in outbreak settings, Taxonomer is publicly available through a web-based user interface.Taxonomer enables rapid, accurate, and interactive analyses of metagenomics data on personal computers and mobile devices.},
-  doi           = {10.1186/s13059-016-0969-1},
-  institution   = {ARUP Institute for Clinical and Experimental Pathology, Salt Lake City, UT, USA. robert.schlaberg@path.utah.edu.},
-  language      = {eng},
-  medline-pst   = {epublish},
-  owner         = {fbreitwieser},
-  pii           = {10.1186/s13059-016-0969-1},
-  pmc           = {PMC4880956},
-  pmid          = {27224977},
-  timestamp     = {2016.07.27},
-  url           = {http://dx.doi.org/10.1186/s13059-016-0969-1},
+  author      = {Flygare, Steven and Simmon, Keith and Miller, Chase and Qiao, Yi and Kennedy, Brett and {Di Sera}, Tonya and Graf, Erin H. and Tardif, Keith D. and Kapusta, Aur{\'{e}}lie and Rynearson, Shawn and Stockmann, Chris and Queen, Krista and Tong, Suxiang and Voelkerding, Karl V. and Blaschke, Anne and Byington, Carrie L. and Jain, Seema and Pavia, Andrew and Ampofo, Krow and Eilbeck, Karen and Marth, Gabor and Yandell, Mark and Schlaberg, Robert},
+  title       = {Taxonomer: an interactive metagenomics analysis portal for universal pathogen detection and host mRNA expression profiling.},
+  journal     = {Genome Biol},
+  year        = {2016},
+  volume      = {17},
+  number      = {1},
+  pages       = {111},
+  abstract    = {High-throughput sequencing enables unbiased profiling of microbial communities, universal pathogen detection, and host response to infectious diseases. However, computation times and algorithmic inaccuracies have hindered adoption.We present Taxonomer, an ultrafast, web-tool for comprehensive metagenomics data analysis and interactive results visualization. Taxonomer is unique in providing integrated nucleotide and protein-based classification and simultaneous host messenger RNA (mRNA) transcript profiling. Using real-world case-studies, we show that Taxonomer detects previously unrecognized infections and reveals antiviral host mRNA expression profiles. To facilitate data-sharing across geographic distances in outbreak settings, Taxonomer is publicly available through a web-based user interface.Taxonomer enables rapid, accurate, and interactive analyses of metagenomics data on personal computers and mobile devices.},
+  doi         = {10.1186/s13059-016-0969-1},
+  institution = {ARUP Institute for Clinical and Experimental Pathology, Salt Lake City, UT, USA. robert.schlaberg@path.utah.edu.},
+  language    = {eng},
+  medline-pst = {epublish},
+  owner       = {fbreitwieser},
+  pii         = {10.1186/s13059-016-0969-1},
+  pmc         = {PMC4880956},
+  pmid        = {27224977},
+  timestamp   = {2016.07.27},
+  url         = {http://dx.doi.org/10.1186/s13059-016-0969-1},
 }
 
 @Article{SSalzberg_CPardo2016-NNN,
-  author        = {Salzberg, Steven L. and Breitwieser, Florian P. and Kumar, Anupama and Hao, Haiping and Burger, Peter and Rodriguez, Fausto J. and Lim, Michael and Qui{\~{n}}ones-Hinojosa, Alfredo and Gallia, Gary L. and Tornheim, Jeffrey A. and Melia, Michael T. and Sears, Cynthia L. and Pardo, Carlos A.},
-  title         = {Next-generation sequencing in neuropathologic diagnosis of infections of the nervous system.},
-  journal       = {Neurol Neuroimmunol Neuroinflamm},
-  year          = {2016},
-  volume        = {3},
-  number        = {4},
-  pages         = {e251},
-  month         = {Aug},
-  __markedentry = {[fbreitwieser:6]},
-  abstract      = {To determine the feasibility of next-generation sequencing (NGS) microbiome approaches in the diagnosis of infectious disorders in brain or spinal cord biopsies in patients with suspected CNS infections.In a prospective pilot study, we applied NGS in combination with a new computational analysis pipeline to detect the presence of pathogenic microbes in brain or spinal cord biopsies from 10 patients with neurologic problems indicating possible infection but for whom conventional clinical and microbiology studies yielded negative or inconclusive results.Direct DNA and RNA sequencing of brain tissue biopsies generated 8.3 million to 29.1 million sequence reads per sample, which successfully identified with high confidence the infectious agent in 3 patients for whom validation techniques confirmed the pathogens identified by NGS. Although NGS was unable to identify with precision infectious agents in the remaining cases, it contributed to the understanding of neuropathologic processes in 5 others, demonstrating the power of large-scale unbiased sequencing as a novel diagnostic tool. Clinical outcomes were consistent with the findings yielded by NGS on the presence or absence of an infectious pathogenic process in 8 of 10 cases, and were noncontributory in the remaining 2.NGS-guided metagenomic studies of brain, spinal cord, or meningeal biopsies offer the possibility for dramatic improvements in our ability to detect (or rule out) a wide range of CNS pathogens, with potential benefits in speed, sensitivity, and cost. NGS-based microbiome approaches present a major new opportunity to investigate the potential role of infectious pathogens in the pathogenesis of neuroinflammatory disorders.},
-  doi           = {10.1212/NXI.0000000000000251},
-  institution   = {ter Science, and Biostatistics (S.L.S.), Johns Hopkins University, Baltimore, MD.},
-  language      = {eng},
-  medline-pst   = {epublish},
-  owner         = {fbreitwieser},
-  pii           = {NEURIMMINFL2016009183},
-  pmc           = {PMC4907805},
-  pmid          = {27340685},
-  timestamp     = {2016.07.28},
-  url           = {http://dx.doi.org/10.1212/NXI.0000000000000251},
+  author      = {Salzberg, Steven L. and Breitwieser, Florian P. and Kumar, Anupama and Hao, Haiping and Burger, Peter and Rodriguez, Fausto J. and Lim, Michael and Qui{\~{n}}ones-Hinojosa, Alfredo and Gallia, Gary L. and Tornheim, Jeffrey A. and Melia, Michael T. and Sears, Cynthia L. and Pardo, Carlos A.},
+  title       = {Next-generation sequencing in neuropathologic diagnosis of infections of the nervous system.},
+  journal     = {Neurol Neuroimmunol Neuroinflamm},
+  year        = {2016},
+  volume      = {3},
+  number      = {4},
+  pages       = {e251},
+  month       = {Aug},
+  abstract    = {To determine the feasibility of next-generation sequencing (NGS) microbiome approaches in the diagnosis of infectious disorders in brain or spinal cord biopsies in patients with suspected CNS infections.In a prospective pilot study, we applied NGS in combination with a new computational analysis pipeline to detect the presence of pathogenic microbes in brain or spinal cord biopsies from 10 patients with neurologic problems indicating possible infection but for whom conventional clinical and microbiology studies yielded negative or inconclusive results.Direct DNA and RNA sequencing of brain tissue biopsies generated 8.3 million to 29.1 million sequence reads per sample, which successfully identified with high confidence the infectious agent in 3 patients for whom validation techniques confirmed the pathogens identified by NGS. Although NGS was unable to identify with precision infectious agents in the remaining cases, it contributed to the understanding of neuropathologic processes in 5 others, demonstrating the power of large-scale unbiased sequencing as a novel diagnostic tool. Clinical outcomes were consistent with the findings yielded by NGS on the presence or absence of an infectious pathogenic process in 8 of 10 cases, and were noncontributory in the remaining 2.NGS-guided metagenomic studies of brain, spinal cord, or meningeal biopsies offer the possibility for dramatic improvements in our ability to detect (or rule out) a wide range of CNS pathogens, with potential benefits in speed, sensitivity, and cost. NGS-based microbiome approaches present a major new opportunity to investigate the potential role of infectious pathogens in the pathogenesis of neuroinflammatory disorders.},
+  doi         = {10.1212/NXI.0000000000000251},
+  institution = {ter Science, and Biostatistics (S.L.S.), Johns Hopkins University, Baltimore, MD.},
+  language    = {eng},
+  medline-pst = {epublish},
+  owner       = {fbreitwieser},
+  pii         = {NEURIMMINFL2016009183},
+  pmc         = {PMC4907805},
+  pmid        = {27340685},
+  timestamp   = {2016.07.28},
+  url         = {http://dx.doi.org/10.1212/NXI.0000000000000251},
+}
+
+@Article{SLindgreen_PGardner2016-SR,
+  author               = {Lindgreen, Stinus and Adair, Karen L and Gardner, Paul P},
+  title                = {An evaluation of the accuracy and speed of metagenome analysis tools.},
+  journal              = {Scientific Reports},
+  year                 = {2016},
+  volume               = {6},
+  pages                = {19233},
+  __markedentry        = {[fbreitwieser:]},
+  abstract             = {Metagenome studies are becoming increasingly widespread, yielding important insights into microbial communities covering diverse environments from terrestrial and aquatic ecosystems to human skin and gut. With the advent of high-throughput sequencing platforms, the use of large scale shotgun sequencing approaches is now commonplace. However, a thorough independent benchmark comparing state-of-the-art metagenome analysis tools is lacking. Here, we present a benchmark where the most widely used tools are tested on complex, realistic data sets. Our results clearly show that the most widely used tools are not necessarily the most accurate, that the most accurate tool is not necessarily the most time consuming, and that there is a high degree of variability between available tools. These findings are important as the conclusions of any metagenomics study are affected by errors in the predicted community composition and functional capacity. Data sets and results are freely available from http://www.ucbioinformatics.org/metabenchmark.html.},
+  citation-subset      = {IM},
+  country              = {England},
+  created              = {2016-01-18},
+  doi                  = {10.1038/srep19233},
+  issn                 = {2045-2322},
+  issn-linking         = {2045-2322},
+  journal-abbreviation = {Sci Rep},
+  nlm                  = {PMC4726098},
+  nlm-id               = {101563288},
+  owner                = {NLM},
+  pmid                 = {26778510},
+  pubmodel             = {Electronic},
+  pubstatus            = {epublish},
+  revised              = {2016-01-28},
+  status               = {In-Process},
+  timestamp            = {2016.10.13},
+}
+
+@Article{SFlygare_RSchlaberg2016-GB,
+  author               = {Flygare, Steven and Simmon, Keith and Miller, Chase and Qiao, Yi and Kennedy, Brett and Di Sera, Tonya and Graf, Erin H and Tardif, Keith D and Kapusta, Aurélie and Rynearson, Shawn and Stockmann, Chris and Queen, Krista and Tong, Suxiang and Voelkerding, Karl V and Blaschke, Anne and Byington, Carrie L and Jain, Seema and Pavia, Andrew and Ampofo, Krow and Eilbeck, Karen and Marth, Gabor and Yandell, Mark and Schlaberg, Robert},
+  title                = {Taxonomer: an interactive metagenomics analysis portal for universal pathogen detection and host mRNA expression profiling.},
+  journal              = {Genome Biology},
+  year                 = {2016},
+  volume               = {17},
+  pages                = {111},
+  month                = {May},
+  __markedentry        = {[fbreitwieser:6]},
+  abstract             = {High-throughput sequencing enables unbiased profiling of microbial communities, universal pathogen detection, and host response to infectious diseases. However, computation times and algorithmic inaccuracies have hindered adoption. We present Taxonomer, an ultrafast, web-tool for comprehensive metagenomics data analysis and interactive results visualization. Taxonomer is unique in providing integrated nucleotide and protein-based classification and simultaneous host messenger RNA (mRNA) transcript profiling. Using real-world case-studies, we show that Taxonomer detects previously unrecognized infections and reveals antiviral host mRNA expression profiles. To facilitate data-sharing across geographic distances in outbreak settings, Taxonomer is publicly available through a web-based user interface. Taxonomer enables rapid, accurate, and interactive analyses of metagenomics data on personal computers and mobile devices.},
+  citation-subset      = {IM},
+  country              = {England},
+  created              = {2016-5-26},
+  doi                  = {10.1186/s13059-016-0969-1},
+  issn                 = {1474-760X},
+  issn-linking         = {1474-7596},
+  issue                = {1},
+  journal-abbreviation = {Genome Biol},
+  keywords             = {Infectious disease diagnostics; Metagenomics; Microbiome; Pathogen detection},
+  nlm                  = {PMC4880956},
+  nlm-id               = {100960660},
+  owner                = {NLM},
+  pmid                 = {27224977},
+  pubmodel             = {Electronic},
+  pubstatus            = {epublish},
+  revised              = {2016-5-29},
+  status               = {In-Data-Review},
+  timestamp            = {2016.10.19},
+}
+
+@Article{EGraf_RSchlaberg2016-Jocm,
+  author               = {Graf, Erin H and Simmon, Keith E and Tardif, Keith D and Hymas, Weston and Flygare, Steven and Eilbeck, Karen and Yandell, Mark and Schlaberg, Robert},
+  title                = {Unbiased Detection of Respiratory Viruses by Use of RNA Sequencing-Based Metagenomics: a Systematic Comparison to a Commercial PCR Panel.},
+  journal              = {Journal of clinical microbiology},
+  year                 = {2016},
+  volume               = {54},
+  pages                = {1000--1007},
+  month                = {Apr},
+  __markedentry        = {[fbreitwieser:6]},
+  abstract             = {Current infectious disease molecular tests are largely pathogen specific, requiring test selection based on the patient's symptoms. For many syndromes caused by a large number of viral, bacterial, or fungal pathogens, such as respiratory tract infections, this necessitates large panels of tests and has limited yield. In contrast, next-generation sequencing-based metagenomics can be used for unbiased detection of any expected or unexpected pathogen. However, barriers for its diagnostic implementation include incomplete understanding of analytical performance and complexity of sequence data analysis. We compared detection of known respiratory virus-positive (n= 42) and unselected (n= 67) pediatric nasopharyngeal swabs using an RNA sequencing (RNA-seq)-based metagenomics approach and Taxonomer, an ultrarapid, interactive, web-based metagenomics data analysis tool, with an FDA-cleared respiratory virus panel (RVP; GenMark eSensor). Untargeted metagenomics detected 86% of known respiratory virus infections, and additional PCR testing confirmed RVP results for only 2 (33%) of the discordant samples. In unselected samples, untargeted metagenomics had excellent agreement with the RVP (93%). In addition, untargeted metagenomics detected an additional 12 viruses that were either not targeted by the RVP or missed due to highly divergent genome sequences. Normalized viral read counts for untargeted metagenomics correlated with viral burden determined by quantitative PCR and showed high intrarun and interrun reproducibility. Partial or full-length viral genome sequences were generated in 86% of RNA-seq-positive samples, allowing assessment of antiviral resistance, strain-level typing, and phylogenetic relatedness. Overall, untargeted metagenomics had high agreement with a sensitive RVP, detected viruses not targeted by the RVP, and yielded epidemiologically and clinically valuable sequence information.},
+  citation-subset      = {IM},
+  copyright            = {Copyright © 2016, American Society for Microbiology. All Rights Reserved.},
+  country              = {United States},
+  created              = {2016-3-26},
+  doi                  = {10.1128/JCM.03060-15},
+  issn                 = {1098-660X},
+  issn-linking         = {0095-1137},
+  issue                = {4},
+  journal-abbreviation = {J Clin Microbiol},
+  nlm                  = {PMC4809917 [Available on 10/01/16]},
+  nlm-id               = {7505564},
+  owner                = {NLM},
+  pmid                 = {26818672},
+  pubmodel             = {Print-Electronic},
+  pubstatus            = {ppublish},
+  revised              = {2016-4-5},
+  status               = {In-Process},
+  timestamp            = {2016.10.19},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
