Updated vignette, updated to v0.2.4

--- a/vignettes/pavian-bibliography.bib
+++ b/vignettes/pavian-bibliography.bib
@@ -537,11 +537,11 @@
 @Article{DKim_SSalzber2016-Biorxiv,
   author    = {Kim, Daehwan and Song, Li and Breitwieser, Florian P and Salzberg, Steven L},
   title     = {Centrifuge: rapid and sensitive classification of metagenomic sequences},
-  journal   = {bioRxiv},
+  journal   = {Genome Research},
   year      = {2016},
   abstract  = {Centrifuge is a novel microbial classification engine that enables rapid, accurate and sensitive labeling of reads and quantification of species on desktop computers. The system uses an indexing scheme based on the Burrows-Wheeler transform (BWT) and the Ferragina-Manzini (FM) index, optimized specifically for the metagenomic classification problem. Centrifuge requires a relatively small index (4.2 GB for 4,078 bacterial and 200 archaeal genomes) and classifies sequences at very high speed, allowing it to process the millions of reads from a typical high-throughput DNA sequencing run within a few minutes. Together these advances enable timely and accurate analysis of large metagenomics data sets on conventional desktop computers. Because of its space-optimized indexing schemes, Centrifuge also makes it possible to index the entire NCBI non-redundant nucleotide sequence database (a total of 109 billion bases) with an index size of 69 GB, in contrast to k-mer based indexing schemes, which require far more extensive space. Centrifuge is available as free, open-source software from http://www.ccb.jhu.edu/software/centrifuge.},
   doi       = {10.1101/054965},
-  eprint    = {http://biorxiv.org/content/early/2016/05/25/054965.full.pdf},
+  eprint    = {http://genome.cshlp.org/content/early/2016/10/17/gr.210641.116?top=1},
   owner     = {fbreitwieser},
   publisher = {Cold Spring Harbor Labs Journals},
   timestamp = {2016.07.27},
@@ -618,7 +618,7 @@
   timestamp            = {2016.10.13},
 }
 
-@Article{SFlygare_RSchlaberg2016-GB,
+@Article{SFlygare_RSchlaberg2016-GBa,
   author               = {Flygare, Steven and Simmon, Keith and Miller, Chase and Qiao, Yi and Kennedy, Brett and Di Sera, Tonya and Graf, Erin H and Tardif, Keith D and Kapusta, Aurélie and Rynearson, Shawn and Stockmann, Chris and Queen, Krista and Tong, Suxiang and Voelkerding, Karl V and Blaschke, Anne and Byington, Carrie L and Jain, Seema and Pavia, Andrew and Ampofo, Krow and Eilbeck, Karen and Marth, Gabor and Yandell, Mark and Schlaberg, Robert},
   title                = {Taxonomer: an interactive metagenomics analysis portal for universal pathogen detection and host mRNA expression profiling.},
   journal              = {Genome Biology},
@@ -676,6 +676,31 @@
   revised              = {2016-4-5},
   status               = {In-Process},
   timestamp            = {2016.10.19},
+}
+
+@Article{Meren_TDelmont-PeerJ2015,
+  author    = {Eren, A Murat and Esen, {\"O}zcan C and Quince, Christopher and Vineis, Joseph H and Morrison, Hilary G and Sogin, Mitchell L and Delmont, Tom O},
+  title     = {Anvi’o: an advanced analysis and visualization platform for ‘omics data},
+  journal   = {PeerJ},
+  year      = {2015},
+  volume    = {3},
+  pages     = {e1319},
+  owner     = {fbreitwieser},
+  publisher = {PeerJ Inc.},
+  timestamp = {2016.10.31},
+}
+
+@Article{JPaulsen_MPop-2013-NM,
+  author    = {Paulson, Joseph N and Stine, O Colin and Bravo, H{\'e}ctor Corrada and Pop, Mihai},
+  title     = {Differential abundance analysis for microbial marker-gene surveys},
+  journal   = {Nature Methods},
+  year      = {2013},
+  volume    = {10},
+  number    = {12},
+  pages     = {1200--1202},
+  owner     = {fbreitwieser},
+  publisher = {Nature Publishing Group},
+  timestamp = {2016.11.11},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
