--- a/vignettes/pavian-walkthrough.Rmd
+++ b/vignettes/pavian-walkthrough.Rmd
@@ -19,7 +19,7 @@ bibliography: pavian-bibliography.bib
 
 Pavian ('pathogen visualization and more') is a interactive web tool to explore at metagenomics classification results. Pavian has been developed with this clinical metagenomics in mind. However, it should be useful to anyone who wants to analyze and visualize their metagenomics data. This document gives a walkthrough of the interface by looking at the provided example data from brain biospies. The images have been generated using RSelenium.
 
-![Pavian interface with the example data loaded. You can change the name of the sample set, or individual samples. Click 'Save table' after any change. Click 'Browse' to upload custom .report files. ](load-data-set.png)
+![Pavian interface with the example data loaded. You can change the name of the sample set, or the name that appears in the interface for individual samples. Click 'Save table' after any change. ](load-data-set.png)
 
 ## 1) Data Input - Import Kraken and Centrifuge report files
 The first step is loading data. Pavian currently supports results from Kraken [@DWood_SSalzberg2014-GB] and Centrifuge [@DKim_SSalzber2016-Biorxiv]. It expects files ending with '.report.csv', generated with kraken-report or centrifuge-report. Before data is loaded, Pavian shows only a limited part of the interface (see Figure 1). Click 'Browse' or 'Choose files' (depending on browser) to select files to upload to Pavian. The uploaded files will be added to a new sample set with an auto-generated name. You can change the name of the samples and the sample set using the interface that appears, once the files are loaded. 
@@ -31,7 +31,7 @@ In this walk through we use data from @SSalzberg_CPardo2016-NNN. To load this da
 
 Every samples is from a diseased patient. There are no healthy controls, and for all but one patient (PT8) there is only one sample available. The patients had different diseases; thus it was not expected that the same bug was the cause in the patients. The samples are their own control - ubiquitously present microbes probably are sequencing or laboratory contaminants. 
 
-The FASTQ files for this study are available at http://www.ncbi.nlm.nih.gov/bioproject/PRJNA314149. The reads were classified with Kraken. The Kraken report files from these samples are available at ADDLINK. 
+The FASTQ files for this study are available at http://www.ncbi.nlm.nih.gov/bioproject/PRJNA314149. The reads were classified with Kraken.
 
 ## 2) Results Overview - Look at the overall statistics across the samples
 ![Results overview gives a quick view to the classification results.](results-overview.png)
@@ -44,23 +44,16 @@ The samples of the brain biopsies dataset have between 8.3 and 29 million reads,
 
 Click 'Comparison' and 'All data' to delve into the data (see Figure 3). The sample comparison view juxtaposes the identification results from the samples in a query-able table with taxa as rows and samples as columns. The table provides a visual guide to the values with inline bars, and the column taxid links to NCBI. You can decide to show percentages or z-scores, only show results at a certain taxon level, and filter uninteresting taxa. By default, the taxa 'Homo sapiens', 'synthetic construct' and 'unclassified' are filtered.
 
-From this view, you can also select to see the data in the table in a heatmap representation (Figure 4). Note that the data displayed always correspond to the table - to show more rows in the heatmap, first select to show more rows in the table. Furthermore, you can look at how the samples are correlated with each other in 'Samples Clustering'.
-
 In the brain biopsies dataset, we immediately see an outlier in sample PT5, which is the only one with a substantial number of JC polyomavirus reads. Note the table is rather wide with ten samples, and the fourth column provides an overview of the values in all columns. You can restrict the view to bacteria, viruses, or eukaryotic microbes by selecting the appropriate link in the sidebar.
 
 ![Sample comparision provides the data from all the samples in a sample set in a concise queryable table.](menu-comp.png)
 
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=.7\textwidth]{comp-heatmap1.png}
-\caption{In the heatmap view, the data can be visualized in this intuitive way, clustering samples and taxa by abundances.}
-\end{figure}
 
 ## 4) Sample - Zoom into one sample with a Sankey diagram
 
 As JC Polyomavirus is a prime suspect in sample PT5, let's look further into the sample. Select 'Sample' in the sidebar, and then 'PT5' (Figure 5).
 
-![Sankey diagram of sample PT5 shows that JC Polyomavirus dominates the sample, and no other microbiota have been detected in a significant amount.](flow-pt5.png)
+![Sankey diagram of sample PT5 shows that JC Polyomavirus dominates the sample, and no other microbiota have been detected in a significant amount. When hovering nodes, the rea distribution for this taxon in other samples is displayed on the right. Here, Escherichia coli is selected. ](flow-pt5-2.png)
 
 The sample comparison view allows a user to juxtapose the identification results from multiple samples (Figure 1C). The main view is an interactive table with taxa as rows and samples as columns. As the number of samples grows, this table can get very wide; thus to provide overview of the abundances in wide tables, the third column contains an inline barchart representation of the counts for a given species (row) across all samples. By default, read counts at all taxonomy levels are shown, but it is possible to only show specific taxonomical levels. The table can be queried and filtered.
 
@@ -78,7 +71,7 @@ Click 'Alignment viewer' to get to Pavian's two functionalities to help in this 
 
 With a BAM file and BAM index (BAI) available, we can use the genome viewer. Click 'View alignment'. Normally, the two files have to be uploaded by clicking the 'Browse' button. Pavian includes the alignment of the sequences of PT5 to the reference genome of JC polyomavirus, and it is loaded by clicking 'Show alignment pileup' when no files are uploaded. Upon loading the files, the coverage over the genome is displayed (Figure 7). You can select a region to zoom into. For this genome we see that the reads align pretty randomly across the genome, but certain small region are not covered. As the reference genome is a strain that was isolated in 1993, it is very likely that this patient does have a different strain. Still, the coverage of this genome provides confidence that it is the same species.
 
-![The alignment of the reads of sample PT5 to JC polyomavirus reference genome can be explored with the alignment viewer. There is a high coverage of most regions of the genome.](alignment_viewer-pt5.png)
+![The alignment of the reads of sample PT5 to JC polyomavirus reference genome can be explored with the alignment viewer. There is a high coverage of most regions of the genome.](alignment-viewer-pt5.png)
 
 \clearpage
 
